--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-geosearch": "^4.0.0",
+    "numeral": "^2.0.6",
     "pinia": "^2.2.0",
     "pinia-plugin-persistedstate": "^3.2.1",
     "roboto-fontface": "*",
